Fixes the problem with the invisible section start!

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo {
-  font-size: 30px;
+  font-size: 25px;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -382,7 +382,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   background: url("../img/ReikiFlyer.jpg") top center; 
   background-size: cover;
   position: relative;
@@ -398,8 +398,8 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
 }
 
-#hero .container {
-  padding-top: 72px;
+section .container {
+  padding-top: 60px;
 }
 
 @media (max-width: 992px) {
@@ -407,8 +407,6 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 62px;
   }
 }
-
-
 
 #hero h1 {
   margin: 0;
@@ -502,8 +500,7 @@ section {
 }
 
 .section-title p {
-  margin: 0;
-  margin: 0;
+  margin-top: 16px;
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
